Refactor participant availability handling to ensure slots are clipped to valid date and time ranges instead of deleting it completely